@@ -1,5 +1,6 @@
 2001-08-20  Dave Jones  <davej@suse.de>
 
+	* pp/oprof_convert.c:
 	* pp/oprofpp.c: use EXIT_FAILURE | EXIT_SUCCESS
 	  in exit() calls.
 	* oprofile.c: Make non-exported functions static
